# 00.00.47 (58174) Oct 31, 2011
Added file i/o for message storing, see #3136
# 00.00.46 (58158) Oct 31, 2011
Added flavor for EventServer
# 00.00.45 (58060) Oct 27, 2011
# 00.00.44 (58058) Oct 27, 2011
# 00.00.43 (58055) Oct 27, 2011
# 00.00.42 (56555) Sep 14, 2011
Added (commented-out) example of using XStream
# 00.00.41 (56308) Sep 8, 2011
Added StudentConfigFrame
Allow different sim types
Improved SimView playback
Removed push notifications
Added smoothing for playback
Added support for push notifications
# 00.00.40 (56240) Sep 6, 2011
Fixed indices of playback
Fixed exiting and student list
Improvements to support multiple sim types
Switched to use java serialization + in-memory storage instead of morphia disk-based storage
# 00.00.39 (56172) Sep 5, 2011
Send one-way messages in a separate non-blocking thread
Fixed concurrentmodificationexception in Server
# 00.00.38 (56166) Sep 5, 2011
# 00.00.37 (56164) Sep 5, 2011
Rewrote prototype to use java.net and use one thread per client
Added logout command
Started prototype for java.net
Changed TimeControlFrame to use Not instead of SettableNot, see #3045
# 00.00.36 (51892) May 13, 2011
# 00.00.35 (51890) May 13, 2011
# 00.00.34 (51887) May 13, 2011
# 00.00.33 (51885) May 13, 2011
# 00.00.32 (51883) May 13, 2011
# 00.00.31 (51882) May 13, 2011
# 00.00.30 (51881) May 13, 2011
# 00.00.29 (51880) May 13, 2011
# 00.00.28 (49891) Mar 16, 2011
Added a clear button that resets the database
# 00.00.27 (49838) Mar 15, 2011
Removed console output
# 00.00.26 (49836) Mar 15, 2011
Send single messages instead of batching
Send json from client machines instead of POJO graphs
# 00.00.25 (49813) Mar 15, 2011
Switched from Serializable to IProguardKeepClass to support Jackson beans
# 00.00.24 (49811) Mar 15, 2011
# 00.00.23 (49809) Mar 15, 2011
Converted to use Jackson for increased performance
# 00.00.22 (49806) Mar 14, 2011
Added batch transmission
Fixed: gravity-and-orbits depends on org.bson.* and com.google.*